Bug 1670793 - Hold animated shared surface until the end of the composite when using software GL. r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D93463